fix: cerficate text alignment with larger text

--- a/src/styles/partials/certificate.sass
+++ b/src/styles/partials/certificate.sass
@@ -6,13 +6,14 @@
 
     #image-wrapper
         display: grid
-        align-self: center
+        align-self: start
         padding: 0 1.2em 0 0
 
     #certificate-details
         display: grid
         padding: 0
         justify-items: start
+        text-align: left
 
         li
             list-style: none
